<resources>
    <string name="app_name">Movies</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mollis nunc massa, quis suscipit orci mattis a. Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum. Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum. Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum</string>
    <string name="activity_detail_action_label_1">Pending</string>
    <string name="activity_detail_action_label_2">Viewed</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="activity_detail_label_description">Description</string>
    <string name="activity_detail_label_tagline">Tagline</string>

      <string name="star_data">
            M 200.30535,69.729172
            C 205.21044,69.729172 236.50709,141.52218 240.4754,144.40532
            C 244.4437,147.28846 322.39411,154.86809 323.90987,159.53312
            C 325.42562,164.19814 266.81761,216.14828 265.30186,220.81331
            C 263.7861,225.47833 280.66544,301.9558 276.69714,304.83894
            C 272.72883,307.72209 205.21044,268.03603 200.30534,268.03603
            C 195.40025,268.03603 127.88185,307.72208 123.91355,304.83894
            C 119.94524,301.9558 136.82459,225.47832 135.30883,220.8133
            C 133.79307,216.14828 75.185066,164.19813 76.700824,159.53311
            C 78.216581,154.86809 156.16699,147.28846 160.13529,144.40532
            C 164.1036,141.52218 195.40025,69.729172 200.30535,69.729172 z
    </string>

    <string name="star_lollipop">
            M 223.42,133.484
            C 237.895,98.1973 280.378,100.58 295.49,133.484
            C 302.176,148.044 293.576,165.914 270.253,183.357
            C 264.16,187.914 268.606,245.136 268.606,248.852
            C 268.606,256.589 268.606,295.171 268.606,302.907
            C 268.606,322.848 268.606,329.725 268.606,339.649
            C 268.606,347.385 255.048,349.681 255.048,339.649
            C 255.048,331.913 255.361,310.637 255.048,302.907
            C 254.579,291.371 255.048,256.788 255.048,249.052
            C 255.048,238.561 254.706,187.75 248.302,183.489
            C 221.536,165.677 218.848,144.628 223.42,133.484 z
    </string>
    <string name="activity_detail_reviews_description">Reviews</string>
    <string name="activity_detail_confirmation">Saved !!</string>
    <string name="activity_movies.message.loading_film">Movie loading, please wait</string>
    <string name="activity_movies.message.more_films">Loading more films</string>
    <string name="action.cancel">Cancel</string>
</resources>
