<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.is.movies.custom.views.ObservableScrollView
        android:id="@+id/activity_detail_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_movie_cover"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_movie_height"
                android:scaleType="centerCrop" />

            <com.is.movies.custom.views.LobsterTextView
                android:id="@+id/activity_detail_title"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_below="@id/item_movie_cover"
                android:background="@color/theme_primary"
                android:elevation="4dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:paddingLeft="48dp"
                android:paddingRight="48dp"
                android:scaleY="0"
                android:textColor="#FFF"
                android:textSize="28sp"
                android:transformPivotY="0dp"
                tools:text="An awesome title" />

            <ImageButton
                android:id="@+id/activity_detail_fab"
                android:layout_width="@dimen/fab_size"
                android:layout_height="@dimen/fab_size"
                android:layout_alignParentRight="true"
                android:layout_below="@id/item_movie_cover"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="-27dp"
                android:background="@drawable/fab"
                android:elevation="4dp"
                android:scaleX="0"
                android:scaleY="0"
                android:src="@drawable/ic_fab_star"
                android:stateListAnimator="@anim/fab_animation" />

            <ProgressBar
                android:id="@+id/activity_detail_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_below="@id/activity_detail_title"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:visibility="gone"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/activity_detail_book_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_detail_title"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin_double_double"
                android:paddingLeft="@dimen/activity_horizontal_margin_half"
                android:paddingRight="@dimen/activity_horizontal_margin_half"
                android:paddingTop="@dimen/activity_vertical_margin_half"
                android:scaleY="0"
                android:transformPivotY="0dp">

                <TextView
                    android:id="@+id/activity_detail_homepage"
                    style="@style/MaterialMoviesDetailField"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:visibility="gone"
                    tools:text="http://awesome.title.com" />

                <TextView
                    android:id="@+id/activity_detail_company"
                    style="@style/MaterialMoviesDetailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:visibility="gone"
                    tools:text="Warner Bros, Paramount Pictures" />

                <TextView
                    android:id="@+id/activity_detail_header_tagline"
                    style="@style/MaterialMoviesHeaderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_detail_label_tagline"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/activity_detail_tagline"
                    style="@style/MaterialMoviesDetailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    tools:text="Mankind was born on Earth. It was never meant to die here." />

                <TextView
                    android:id="@+id/activity_detail_header_description"
                    style="@style/MaterialMoviesHeaderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin_half"
                    android:text="@string/activity_detail_label_description"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/activity_detail_content"
                    style="@style/MaterialMoviesDetailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/lorem" />

                <TextView
                    android:id="@+id/activity_detail_header_reviews"
                    style="@style/MaterialMoviesHeaderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin_half"
                    android:text="@string/activity_detail_reviews_description"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>
    </com.is.movies.custom.views.ObservableScrollView>


    <FrameLayout
        android:id="@+id/activity_detail_conf_container"
        style="@style/MaterialMoviesDetailConfirmation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_primary">

        <com.is.movies.custom.views.LobsterTextView
            android:id="@+id/activity_detail_confirmation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin_double_double"
            android:text="@string/activity_detail_confirmation"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

    </FrameLayout>


</FrameLayout>
